fix food background on tablet

--- a/assets/css/modules/about/food.scss
+++ b/assets/css/modules/about/food.scss
@@ -10,4 +10,8 @@
       display: none;
     }
   }
+
+  @media (min-width:480px) and (max-width:767px) {
+    background-image: none !important;
+  }
 }
